--- a/views/report.html
+++ b/views/report.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title><%Title%></title>
   <link href="stylesheets/style.css" rel="stylesheet" />
+  <title><%Title%></title>
+  
   
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -17,70 +18,144 @@
 
 
   <script type="text/javascript" src="/javascripts/controllers.js"> </script>
+  <style>
+body {
+    margin-top:100px !important;
+    text-align: center !important;
+  background: #fafafa;
+  color: #444;
+  font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
+  text-shadow: 0 1px 0 #fff;
+}
+
+strong {
+  font-weight: bold; 
+}
+
+em {
+  font-style: italic; 
+}
+
+table {
+  width:60% !important;
+  background: #f5f5f5;
+  border-collapse: separate;
+  box-shadow: inset 0 1px 0 #fff;
+  font-size: 12px;
+  line-height: 24px;
+  margin: 30px auto;
+  text-align: left;
+  width: 800px;
+} 
+
+th {
+  background:linear-gradient(#777, #444);
+  border-left: 1px solid #555;
+  border-right: 1px solid #777;
+  border-top: 1px solid #555;
+  border-bottom: 1px solid #333;
+  box-shadow: inset 0 1px 0 #999;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px 15px;
+  position: relative;
+  text-shadow: 0 1px 0 #000;  
+}
+
+th:after {
+  background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
+  content: '';
+  display: block;
+  height: 25%;
+  left: 0;
+  margin: 1px 0 0 0;
+  position: absolute;
+  top: 25%;
+  width: 100%;
+}
+
+th:first-child {
+  border-left: 1px solid #777;  
+  box-shadow: inset 1px 1px 0 #999;
+}
+
+th:last-child {
+  box-shadow: inset -1px 1px 0 #999;
+}
+
+td {
+  border-right: 1px solid #fff;
+  border-left: 1px solid #e8e8e8;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #e8e8e8;
+  padding: 10px 15px;
+  position: relative;
+  transition: all 300ms;
+}
+
+td:first-child {
+  box-shadow: inset 1px 0 0 #fff;
+} 
+
+td:last-child {
+  border-right: 1px solid #e8e8e8;
+  box-shadow: inset -1px 0 0 #fff;
+} 
+
+tr {
+
+}
+
+tr:nth-child(odd) td {
+  background: #f1f1f1;  
+}
+
+tr:last-of-type td {
+  box-shadow: inset 0 -1px 0 #fff; 
+}
+
+tr:last-of-type td:first-child {
+  box-shadow: inset 1px -1px 0 #fff;
+} 
+
+tr:last-of-type td:last-child {
+  box-shadow: inset -1px -1px 0 #fff;
+}
+  </style>
     </head>
 
   <body ng-controller="reportCtrl">
 
-  	      <div class="row-header" >
-            <div class="col-md-4">
-                NAME 
-            </div>
-            <div class="col-md-7 dateContainer" style="margin-left:-60px;">
-              <div class="col-sm-1" style="color:black;">
-                {{month}}
-                   <button type="button" class="btn btn-default btn-sm" ng-click="prevWeek()">
+  <table class="table" >
+
+    <thead style="font-size:15px;font-weight:bold;">
+       <button type="button" class="btn btn-default btn-sm" ng-click="prevWeek()">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                   </button>
-              </div>
-                  <div class="col-sm-5 wrapper1" >
-                       <ul class="nav nav-tabs list" id="myTab">
-                         <li ng-repeat="dates in today" style="width=53px;">
-                          {{dates}}
-                        </li>
-                      </ul>                     
-                  </div>
-                  <div class="col-sm-1" style="color:black;">
-                    {{year}}
-                       <button type="button" class="btn btn-default btn-sm" ng-click="nextWeek();updateInput()">
+      {{month}}
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th ng-repeat="dates in today">{{dates}}</th>
+      </tr>
+      {{year}}
+      <button type="button" class="btn btn-default btn-sm" ng-click="nextWeek()">
                         <span class="glyphicon glyphicon-chevron-right"></span>
                       </button>
-                    </div>
-   
-           </div>
+    </thead>
+    <tbody>
+      <tr ng-repeat="user in finalUsers track by $index">
+        <td>{{$index+1}}</td>
+        <td>{{user.Name}}</td>
+        <td>0</td>
+        <td ng-repeat="i in user.temp track by $index">{{i}}</td>
+        <td>0</td>
+      </tr>
+    </tbody>
+  </table>
 
-               <div>
-      <ol>
-         
-        <li ng-repeat="user in finalUsers">
-
-          <div class="row">
-             <div class="col-md-4">
-                 {{user.Name}} 
-             </div>
-
-             <div class="col-md-7">
-                  <div class="col-md-5 wrapper1">
-                    <ul class="nav list" id="myTab" >
-                       <div class="col-sm-0" ng-repeat="i in user.temp track by $index" style="float:left;">
-                        <li><input class="textField" ng-model="user.temp[$index]"/></li>
-                        </div>
-                    </ul>
-                  </div>
-             
- 
-          </div>
-            </div>
-        
-          
-        </li>
-      </ol>
-      </div>
-    </div>
-
-    
-  
-
-    
+    <form method="get" action="/">   
+    <input type="submit" value="Back" style="margin-right:370px;width:100px;">
     
     
   </body>
