--- a/views/index.html
+++ b/views/index.html
@@ -4,46 +4,60 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="stylesheets/style.css" rel="stylesheet" />
-  
+   <link href="stylesheets/notification.css" rel="stylesheet" />
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script><!-- 
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
 <script src="/javascripts/moment.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 
+ <script data-require="jquery@2.1.3" data-semver="2.1.3" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script data-require="angular.js@1.4.0-beta.6" data-semver="1.4.0-beta.6" src="https://code.angularjs.org/1.4.0-beta.6/angular.js"></script>
+<script src="https://rawgit.com/sagiegurari/HTML5-Desktop-Notifications/master/desktop-notify.js"></script>
+    <script src="https://rawgit.com/sagiegurari/angular-web-notification/master/angular-web-notification.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
 
 
   <script type="text/javascript" src="/javascripts/controllers.js"> </script>
   </head>
   <body ng-controller="userCtrl" > 
-<div class="container">
+    <div notifications="bottom right"></div>
+    <div class="navbar" style="background-color:#1C2227;height:50px;color:#FAB23A">
+     
+    </div>
+<div class="container" style="margin-top:-160px;margin-left:210px;">
+ 
+   <form name="Demo" method="get" action="/" ng-submit="submit()">
 
-   <form name="Demo" ng-submit="submit()" method="get" action="/">
+      <h1 style="margin-left:-600px">TIMESHEET</h1>
+      <p style="margin-left:-600px;font-weight:bold">*** Please FILL only actuals on screen ***</p>
+    <div style="margin-left:-600px;font-weight:bold">
+      <%=Name%>
+    </div>
+      <div style="display:none;">
 
-      <h1>PROJECTS</h1>
-      <div style="display:none">
-      	<input id="Name" type="text" value="<%=Name%>" />
-      	<input id="ID" type="text" value="<%=ID%>" />
+      	<input id="Name" type="text" value="<%=Name%>" disabled />
+      	<input id="ID" type="text" value="<%=ID%>" disabled />
       </div>
  
       <div class="row-header" >
             <div class="col-md-2">
                 Project 
             </div>
-            <div class="col-md-3">
+           <!--  <div class="col-md-3">
                 StartDate  -  EndDate
-            </div>
+            </div> -->
 
-            <div class="col-md-7 dateContainer" style="margin-left:-60px;">
-              <div class="col-sm-1" style="color:black;">
+            <div class="col-md-10 dateContainer" style="margin-left:-60px;">
+              <div class="col-sm-1" style="color:black;width=5.3% !important">
                 {{month}}
                    <button type="button" class="btn btn-default btn-sm" ng-click="prevWeek()">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                   </button>
               </div>
-                  <div class="col-sm-5 wrapper1" >
+                  <div class="col-sm-4 wrapper1" >
                        <ul class="nav nav-tabs list" id="myTab">
                          <li ng-repeat="dates in today" style="width=53px;">
                           {{dates}}
@@ -72,16 +86,18 @@
              <div class="col-md-2">
                  {{project.name}} 
              </div>
-             <div class="col-md-3">
+             <!-- <div class="col-md-3">
                 {{project.startDate|date:'MM/dd/yyyy'}}   -  {{project.endDate | date:'MM/dd/yyyy'}} 
-              </div>
-             <div class="col-md-7">
-                  <div class="col-md-5 wrapper1">
+              </div> -->
+             <div class="col-md-8" style="padding-left:47px;">
+                  <div class="col-md-8 wrapper1">
                     <ul class="nav list" id="myTab" >
-                       <div class="col-sm-0" ng-repeat="i in project.bool track by $index" style="float:left;">
-                        <li><input class="textField" ng-model="project.temp[$index]" ng-disabled='i'/></li>
+                       <div ng-repeat="i in project.bool track by $index" style="float:left;">
+                        <li><input type="number" min="0" max="24" class="textField" ng-model="project.temp[$index]" step="any"/></li>
                         </div>
+                        <p>{{project.temp[0]+project.temp[1]+project.temp[2]+project.temp[3]+project.temp[4]+project.temp[5]+project.temp[6]+project.temp[7]}}</p>
                     </ul>
+                    <span></span>
                   </div>
              
                <!-- <div class="col-md-1 options">
@@ -92,16 +108,27 @@
           </div>
             </div>
         
+          <!-- <td>{{project.items.$sum('qty*cost') currency}}</td> -->
           
         </li>
+        Daily Totals
+        <div style="margin-left:268px;margin-top:-24px;">
+
+        <div class="total" ng-repeat="i in days track by $index" style="float:left;padding-left: 26px;padding-right: 13px;">
+          <li>
+            {{projects[0].temp[$index]+projects[1].temp[$index]+projects[2].temp[$index]+projects[3].temp[$index]+projects[4].temp[$index]}}
+          </li>
+        </div>
+      </div>
       </ol>
+
       </div>
 
-       <input class="btn btn-primary" type="submit" value="Submit">
+       <input class="btn btn-primary" style="margin-left:-1150px;margin-top:90px" type="submit" value="Submit">
         
     </form>
 
    </div>
-  
+    <button class="show-button"></button>
   </body>
 </html>
