--- a/views/report.html
+++ b/views/report.html
@@ -27,15 +27,12 @@ body {
   font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
   text-shadow: 0 1px 0 #fff;
 }
-
 strong {
   font-weight: bold; 
 }
-
 em {
   font-style: italic; 
 }
-
 table {
   width:60% !important;
   background: #f5f5f5;
@@ -47,7 +44,6 @@ table {
   text-align: left;
   width: 800px;
 } 
-
 th {
   background:linear-gradient(#777, #444);
   border-left: 1px solid #555;
@@ -61,7 +57,6 @@ th {
   position: relative;
   text-shadow: 0 1px 0 #000;  
 }
-
 th:after {
   background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
   content: '';
@@ -73,16 +68,13 @@ th:after {
   top: 25%;
   width: 100%;
 }
-
 th:first-child {
   border-left: 1px solid #777;  
   box-shadow: inset 1px 1px 0 #999;
 }
-
 th:last-child {
   box-shadow: inset -1px 1px 0 #999;
 }
-
 td {
   border-right: 1px solid #fff;
   border-left: 1px solid #e8e8e8;
@@ -92,32 +84,24 @@ td {
   position: relative;
   transition: all 300ms;
 }
-
 td:first-child {
   box-shadow: inset 1px 0 0 #fff;
 } 
-
 td:last-child {
   border-right: 1px solid #e8e8e8;
   box-shadow: inset -1px 0 0 #fff;
 } 
-
 tr {
-
 }
-
 tr:nth-child(odd) td {
   background: #f1f1f1;  
 }
-
 tr:last-of-type td {
   box-shadow: inset 0 -1px 0 #fff; 
 }
-
 tr:last-of-type td:first-child {
   box-shadow: inset 1px -1px 0 #fff;
 } 
-
 tr:last-of-type td:last-child {
   box-shadow: inset -1px -1px 0 #fff;
 }
@@ -125,7 +109,7 @@ tr:last-of-type td:last-child {
     </head>
 
   <body ng-controller="reportCtrl">
-
+  <h1 class="h1">DAILY TOTALS</h1>
   <table class="table" >
 
     <thead style="font-size:15px;font-weight:bold;">
@@ -154,8 +138,117 @@ tr:last-of-type td:last-child {
     </tbody>
   </table>
 
+
+  <h1 class="h1" style="margin-top:135px">DAILY UTILIZATION</h1>
+  <table class="table" >
+
+    <thead style="font-size:15px;font-weight:bold;">
+       <button type="button" class="btn btn-default btn-sm" ng-click="prevWeek()">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                  </button>
+      {{month}}
+      <tr>
+        <th ng-repeat="dates in today">{{dates}}</th>
+      </tr>
+      {{year}}
+      <button type="button" class="btn btn-default btn-sm" ng-click="nextWeek()">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                      </button>
+    </thead>
+    <tbody>
+      <td>0 %</td>
+        <td ng-repeat="i in TotalHours track by $index ">{{i | number:0}} %</td>
+        <td>0 %</td>
+     
+    </tbody>
+  </table>
+
+<h1 class="h1" style="margin-top:135px">WEEKLY UTILIZATION</h1>
+  <table class="table" >
+
+    <thead style="font-size:15px;font-weight:bold;">
+       <button type="button" class="btn btn-default btn-sm" ng-click="prevWeek()">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                  </button>
+      {{month}}
+      <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th>{{weekYear}} </th>
+      </tr>
+      {{year}}
+      <button type="button" class="btn btn-default btn-sm" ng-click="nextWeek()">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                      </button>
+    </thead>
+    <tbody>
+      <td></td>
+        <td></td>
+        <td></td>
+     <td>{{weekly_percent | number:0}} %</td>
+     
+    </tbody>
+  </table>
+
+
+  <h1 class="h1" style="margin-top:135px">MONTHLY UTILIZATION</h1>
+  <table class="table" >
+
+    <thead style="font-size:15px;font-weight:bold;">
+       <button type="button" class="btn btn-default btn-sm" ng-click="prevWeek()">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                  </button>
+      <!-- {{month}} -->
+      <tr>
+        <th></th>
+        <th></th>
+        <th>{{months}}</th>
+      </tr>
+      <!-- {{year}} -->
+      <button type="button" class="btn btn-default btn-sm" ng-click="nextWeek()">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                      </button>
+    </thead>
+    <tbody>
+      <td></td>
+        <td></td>
+     <td>{{monthly_percent | number:0}} %</td>
+     
+    </tbody>
+  </table>
+
+
+
+  <!-- h1 class="h1" style="margin-top:135px">MONTHLY UTILIZATION</h1>
+  <table class="table" >
+
+    <thead style="font-size:15px;font-weight:bold;">
+       <button type="button" class="btn btn-default btn-sm" ng-click="prevWeek()">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                  </button>
+      {{month}}
+      <tr>
+        
+      </tr>
+      {{year}}
+      <button type="button" class="btn btn-default btn-sm" ng-click="nextWeek()">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                      </button>
+    </thead>
+    <tbody>
+      <td></td>
+        <td></td>
+        <td></td>
+     <td>{{weekly_percent | number:0}} %</td>
+     
+    </tbody>
+  </table> -->
+
+
+
     <form method="get" action="/">   
-    <input type="submit" value="Back" style="margin-right:370px;width:100px;">
+    <input type="submit" value="Back" style="margin-left:-960px;width:100px;">
     
     
   </body>
